labs3.txt
type to the python3(suri )>>> a=7
>>> b=8
>>> print a/b
  File "<stdin>", line 1
    print a/b
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(a/b)?
>>> a+b
15
>>> a-b
-1
>>> a**b
5764801
>>> a*b
56
>>> a***b
  File "<stdin>", line 1
    a***b
       ^
SyntaxError: invalid syntax
>>> a//b
0
>>> a/b
0.875
>>> a*b+a*b
112
>>> a.b*a.b
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'int' object has no attribute 'b'
>>> a-b
-1
>>> 

